Carnet de Voyage en cours

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +24,21 @@
         <li><a href="Contact">Me contacter</a></li>
     </nav>
     </header>
-    <h1 id="Carnet">Carnets de voyages</h1>
+
+        <h1 id="Carnet">Carnets de voyages</h1>
+
+        <main>
+            <section class="container">
+                <h3>mes derniers voyages</h3>
+                <div>
+                    <img src="./assets/css/style.css" alt="Vienne, Autriche">
+                </div>
+                <div>
+                    <p>Vienne est un mélange d'architecture fastueuse, de musique et de charme pittoresque.</p>
+                    <p>Semblable à nulle autre, Vienne préserve intact son aspect historique d'origine marqué par des édifices fastueux datant de l'époque baroque et des débuts du XXème siècle.</p>
+                    <p>La moitié de la ville est située sur le Danube et offre des parcs, la forêt viennoise et même des zones viticoles pour les loisirs.</p>
+                </div>
+            </section>
+        </main>
 </body>
 </html>
