Carnet de voyage V1

--- a/index.html
+++ b/index.html
@@ -28,16 +28,29 @@
         <h1 id="Carnet">Carnets de voyages</h1>
 
         <main>
-            <section class="container">
-                <h3>mes derniers voyages</h3>
-                <div>
-                    <img src="./assets/css/style.css" alt="Vienne, Autriche">
-                </div>
-                <div>
-                    <p>Vienne est un mélange d'architecture fastueuse, de musique et de charme pittoresque.</p>
-                    <p>Semblable à nulle autre, Vienne préserve intact son aspect historique d'origine marqué par des édifices fastueux datant de l'époque baroque et des débuts du XXème siècle.</p>
-                    <p>La moitié de la ville est située sur le Danube et offre des parcs, la forêt viennoise et même des zones viticoles pour les loisirs.</p>
-                </div>
+            <section class="voyages">
+                <h2>mes derniers voyages</h2>
+                    <h3>Vienne, Autriche</h3>
+                    <div class="container">
+                        <img src="./assets/img/vienne.jpg" alt="Vienne, Autriche" class="image">
+                        <div class="description">
+                            <p>Vienne est un mélange d'architecture fastueuse, de musique et de charme pittoresque.</p>
+                            <p>Semblable à nulle autre, Vienne préserve intact son aspect historique d'origine marqué par des édifices fastueux datant de l'époque baroque et des débuts du XXème siècle.</p>
+                            <p>La moitié de la ville est située sur le Danube et offre des parcs, la forêt viennoise et même des zones viticoles pour les loisirs.</p>
+                            <a href="#">En savoir plus</a>
+                        </div>
+                    </div>
+                    <h3>Marrakech, Maroc</h3>
+                    <div class="container containerR">
+                        <img src="./assets/img/marrakech.jpg" alt="Marrakech, Maroc" class="image">
+                        <div class="description">
+                            <p>Marrakech, est une ville située dans le centre du Maroc au pied des montagnes de l'Atlas. Marrakech est surnommée <span class="rouge">« la ville rouge »</span> ou la <span class="ocre">« ville ocre »</span> en référence à la couleur rouge d'une grande partie de ses immeubles et ses maisons.</p>
+                            <p>Marrakech est une ville unique en son genre qui se distingue totalement du reste. Visiter Marrakech est une expérience qui stimulera tous vos sens : ses couleurs, ses saveurs et ses odeurs vous marqueront dès votre arrivée et vous accompagneront des semaines après votre retour.</p>
+                            <a href="#">En savoir plus</a>
+                        </div>
+                    </div>
+
+
             </section>
         </main>
 </body>
