--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <a href="index.html"><img src="./assets/img/logo.png" alt="logo Hello World" class="logo"></a>
         <nav>
             <ul>
-                <li><a href="Carnet">Carnet de voyages</a</li>
-                <li><a href="Quand">Quand partir ?</a></li>
-                <li><a href="aPropos">À propos</a></li>
-                <li><a href="Contact">Me contacter</a></li>
+                <li><a href="#Carnet">Carnet de voyages</a</li>
+                <li><a href="#Quand">Quand partir ?</a></li>
+                <li><a href="#aPropos">À propos</a></li>
+                <li><a href="#Contact">Me contacter</a></li>
             </ul>
         </nav>
     </header>
@@ -45,8 +45,8 @@
                             <a href="#">En savoir plus</a>
                         </div>
                     </div class="container">
-                    <h2>les meilleures saisons pour voyager</h2>
-                    <table id="Quand" class="saison">
+                    <h2  id="Quand">les meilleures saisons pour voyager</h2>
+                    <table class="saison">
                         <thead>
                             <tr>
                             <th>Ville</th>
