--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="index.html"><img src="./assets/img/logo.png" alt="logo Hello World" class="logo"></a>
         <nav>
             <ul>
-                <li><a href="#Carnet">Carnet de voyages</a</li>
+                <li><a href="#Carnet">Carnet de voyages</a></li>
                 <li><a href="#Quand">Quand partir ?</a></li>
                 <li><a href="#aPropos">À propos</a></li>
                 <li><a href="#Contact">Me contacter</a></li>
@@ -44,7 +44,7 @@
                             <p>Marrakech est une ville unique en son genre qui se distingue totalement du reste. Visiter Marrakech est une expérience qui stimulera tous vos sens : ses couleurs, ses saveurs et ses odeurs vous marqueront dès votre arrivée et vous accompagneront des semaines après votre retour.</p>
                             <a href="#">En savoir plus</a>
                         </div>
-                    </div class="container">
+                    </div>
                     <h2  id="Quand">les meilleures saisons pour voyager</h2>
                     <table class="saison">
                         <thead>
@@ -82,7 +82,6 @@
                         </tr>
                         </tbody>
                     </table>
-                    </div>
             </section>
 
             <section id="aPropos" class="aPropos">
@@ -96,7 +95,6 @@
                     </div>
                 </div>
             </section>
-
             <section id="Contact" class="container">
                 <h2>me contacter</h2>
                 <div class="meContacter">
@@ -106,7 +104,7 @@
                     <em><a href="mailto:claire@helloworld.com" class="eMail">claire@helloworld.com</a></em>
                     <em><a href="tel:+33(0)601030507" class="tel">06 01 03 05 07</a></em>
                 </div>
-                <h3>Formulaire de contact</h3>
+                <h3 class="titreContact">Formulaire de contact</h3>
                 <div class="formulaire">
                     <form action="/" method="get" class="formulaire">
                         <fieldset class="formContent">
